--- a/style.css
+++ b/style.css
@@ -1,46 +1,156 @@
 @font-face {
-    font-family: gotisch;
-    src: url(font/BelweGotisch-VGRB.ttf);
+  font-family: gotisch;
+  src: url(font/BelweGotisch-VGRB.ttf);
 }
 @font-face {
-    font-family: cormorant;
-    src: url(font/CormorantUpright-Bold.ttf);
+  font-family: cormorant;
+  src: url(font/CormorantUpright-Bold.ttf);
 }
-body{
-    background-color: #F9F2E8;
+
+html {
+  background-color: #f9f2e8;
+  position: relative;
 }
-.text {
-    position: relative;
-    height: 500px;
-    overflow: hidden; /* clearfix */
-  }
-.jijirulvling{
-    /*float: right;*/
-    position: absolute;
-    top: 0;
-    right: 0;
+
+* {
+  padding: 0;
+  margin: 0;
 }
-.subtitle{
-    /*float: right;*/
-    /*text-align: right;*/
-    position: absolute;
-    top: 0;
-    right: 80px;
+
+.subtitle {
+  margin-right: 5px;
 }
-.abracadabra{
-    font-family: gotisch;
-    font-size: 50px;
-    color: #C53030;
+
+.abracadabra {
+  font-family: gotisch;
+  font-size: 50px;
+  color: #c53030;
 }
-.exhibition{
-    text-align: right;
-    font-family: cormorant;
-    width:180px;
-    color: #C53030;
-    float: right;
+
+.exhibition {
+  text-align: right;
+  font-family: cormorant;
+  width: 180px;
+  color: #c53030;
+  float: right;
 }
-.content{
-    font-family: cormorant;
-    color: #C53030;
-    font-size: 30px;
+
+.filter{
+  font-family: gotisch;
+  color:#c53030;
+  font-size: 20px;
+  float:right;
+  text-align: right;
+  margin-right: 10px;
+}
+
+.ghosts{
+  transition: opacity 0.5s;
+  opacity: 30%;
+}
+
+.ghosts:hover {
+  opacity: 100%;
+}
+
+.oddities{
+  transition: opacity 0.5s;
+  opacity: 30%;
+}
+
+.oddities:hover {
+  opacity: 100%;
+}
+
+.monsters{
+  transition: opacity 0.5s;
+  opacity: 30%;
+}
+
+.monsters:hover {
+  opacity: 100%;
+}
+
+.left-container{
+  width:30%;
+  transition: width 0.5s;
+}
+
+.left-container:hover{
+  width:60%;
+}
+
+/*.title{
+  margin-left: 8%;
+  transition: margin-left 0.5s;
+}
+
+.title:hover{
+  margin-left: 54%;
+}*/
+
+.content {
+  font-family: gotisch;
+  color: #c53030;
+  font-size: 30px;
+}
+
+.content-text {
+  border-top: 1px #c53030 solid;
+  opacity: 30%;
+  transition: opacity 0.5s;
+}
+
+.content-text:hover {
+  opacity: 100%;
+  height: 80px;
+}
+
+.zhanwei {
+  width: 300px;
+  height: 350px;
+}
+
+.center-container {
+  margin: 0 20px;
+  overflow-x: auto;
+  border-left: 1px #c53030 solid;
+  border-right: 1px #c53030 solid;
+}
+.article {
+  font-family: cormorant;
+  color: #c53030;
+}
+
+.right-text{
+  overflow-x: auto;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+
+.image {
+  background-color: transparent; 
+  margin: 0 auto;
+  perspective: 1000px;
+  -webkit-perspective: 1000px;
+
+}
+
+.inner {
+  position: relative;
+  transition: transform .5s;
+  transform-style: preserve-3d;
+}
+
+.inner > div {
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.image:hover .inner {
+  transform: rotateY(180deg);
 }
